--- a/slaveCar/home.html
+++ b/slaveCar/home.html
@@ -10,6 +10,9 @@
       body {
         font-family: 'edunline';
       }
+      .zoom{
+        zoom:150%;
+      }
     </style>
     <title> Project Car v2 </title>
   </head>
@@ -17,45 +20,42 @@
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand projectName" href="#">Project Car</a>
+          <a class="navbar-brand projectName" href="home.html">Project Car</a>
         </div>
         <ul class="nav navbar-nav">
           <li class="active">
-            <a href="#">
-              Tutorial
+            <a href="home.html">
+              Home
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="controlar.html">
               Controlar
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="led.html">
+              LED
+            </a>
+          </li>
+          <li>
+            <a href="modo.html">
+              Modos de conducao
+            </a>
+          </li>
+          <li>
+            <a href="contato.html">
               Contato
             </a>
           </li>
         </ul>
       </div>
     </nav>
-    <div align="center">
-      <ul>
-        <li>
-          <button type="button" class="btn btn-success">SIGA EM FRENTE</button>
-        </li>
-        <li>
-          <button type="button" class="btn btn-danger">PARE!</button>
-        </li>
-        <li>
-          <button type="button" class="btn btn-success">VOLTANDO PRA TRÁS</button>
-        </li>
-        <li>
-          <button type="button" class="btn btn-success">LIGA O LED</button>
-        </li>
-        <li>
-          <button type="button" class="btn btn-dark">APAGA O LED</button>
-        </li>
-      </ul>
+    <div align = "center">
+      <h1> Seja bem-vindo ao projeto carro v2 </h1>
+    </div>
+    <div align = "justify">
+      <p> Desfrute do seu belo carrinho Wi-Fi. </p>
     </div>
   </body>
 </html>
