Tentando funfa os htmls

--- a/slaveCar/modo.html
+++ b/slaveCar/modo.html
@@ -1,66 +1,15 @@
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML 2.0//EN">
+<html><head>
+<meta http-equiv="content-type" content="text/html; charset=windows-1252">
+<title>Modo de conducao - Project Car v2</title>
 <style>
-</style>
-<html class="no-js">
-  <head>
-    <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
-    <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="fonts/font.css">
-    <style type="text/css">
-      body {
-        font-family: 'edunline';
-      }
-      .zoom{
-        zoom:150%;
-      }
-    </style>
-    <title> Project Car v2 - (Modo de conducao)</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand projectName" href="home.html">Project Car</a>
-        </div>
-        <ul class="nav navbar-nav">
-          <li>
-            <a href="home.html">
-              Home
-            </a>
-          </li>
-          <li>
-            <a href="controlar.html">
-              Controlar
-            </a>
-          </li>
-          <li>
-            <a href="led.html">
-              LED
-            </a>
-          </li>
-          <li class="active">
-            <a href="modo.html">
-              Modos de conducao
-            </a>
-          </li>
-          <li>
-            <a href="contato.html">
-              Contato
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <div align = "center">
-      <h1> Selecione o modo de conducao que voce deseja </h1>
-    </div>
-    <div align = "justify">
-      <p> Se voce deseja uma conducao mais confortavel use o modo "dodo" (botao verde). </p>
-      <p> Caso deseje uma conducao mais agressiva use o modo "xandao" (botao xandao). </p>
-    </div>
-    <div align = "center">
-      <button type="button" class="btn btn-success">Dodo</button>
-      <button type="button" class="btn btn-danger">Xandao</button>
-    </div>
-  </body>
-</html>
+</style></head><body>
+<h1>Escolha seu modo de conducao</h1>
+<p> Se voce deseja uma direcao mais confortavel, aperte o botao dodo.</p>
+<p> Se voce deseja um direcao mais agressiva, aperte o botao xandao.</p>
+<form>
+  <button type="button">Dodo :(</button> 
+  <button type="button">Xandao :D</button> 
+</form>
+<p>Mais opcoes: <a href="home.html">Home</a> | <a href="controlar.html">Controlar</a> | <a href="led.html">LED</a> | <a href="modo.html">Modos de conducao</a> | <a href="contato.html">Contato</a></p>
+</body></html>
