--- a/slaveCar/contato.html
+++ b/slaveCar/contato.html
@@ -1,73 +1,21 @@
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML 2.0//EN">
+<html><head>
+<meta http-equiv="content-type" content="text/html; charset=windows-1252">
+<title>Contato - Project Car v2</title>
 <style>
-</style>
-<html class="no-js">
-  <head>
-    <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
-    <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="fonts/font.css">
-    <style type="text/css">
-      body {
-        font-family: 'edunline';
-      }
-      .zoom{
-        zoom:150%;
-      }
-      textarea {
-        resize: none;
-      }
-    </style>
-    <title> Project Car v2 - (Modo de conducao)</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand projectName" href="home.html">Project Car</a>
-        </div>
-        <ul class="nav navbar-nav">
-          <li>
-            <a href="home.html">
-              Home
-            </a>
-          </li>
-          <li>
-            <a href="controlar.html">
-              Controlar
-            </a>
-          </li>
-          <li>
-            <a href="led.html">
-              LED
-            </a>
-          </li>
-          <li>
-            <a href="modo.html">
-              Modos de conducao
-            </a>
-          </li>
-          <li class="active">
-            <a href="contato.html">
-              Contato
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <div align = "center">
-      <h1> Diriga o carrinho </h1>
-    </div>
-    <div align = "justify">
-      <p> Preenche os campos abaixo para entrar em contato conosco. </p>
-      <div class="col-xs-6">
-        <label for="name">Nome:</label>
-        <input type="text" class="form-control" id="name">
-        <label for="email">email:</label>
-        <input type="text" class="form-control" id="email">
-        <label for="message">Sua mensagem:</label>
-        <textarea class="form-control" rows="5" id="message"></textarea>
-        <button type="button" class="btn btn-success">Enviar</button>
-      </div>
-    </div>
-  </body>
-</html>
+  textarea{
+    resize: none;
+  }
+</style></head><body>
+<h1>Entre em contato consco</h1>
+ <form>
+  Nome completo:<br>
+  <input type="text" name="name_lastname"><br>
+  E-mail:<br>
+  <input type="email" name="email"><br>
+  Mensagem:<br>
+  <textarea rows="4" cols="50"></textarea><br>
+  <button type="button">Enviar!</button> 
+</form>
+<p>Mais opcoes: <a href="home.html">Home</a> | <a href="controlar.html">Controlar</a> | <a href="led.html">LED</a> | <a href="modo.html">Modos de conducao</a> | <a href="contato.html">Contato</a></p>
+</body></html>
