--- a/slaveCar/home.html
+++ b/slaveCar/home.html
@@ -1,61 +1,17 @@
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<style>
-</style>
-<html class="no-js">
-  <head>
-    <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
-    <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="fonts/font.css">
-    <style type="text/css">
-      body {
-        font-family: 'edunline';
-      }
-      .zoom{
-        zoom:150%;
-      }
-    </style>
-    <title> Project Car v2 </title>
-  </head>
-  <body>
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand projectName" href="home.html">Project Car</a>
-        </div>
-        <ul class="nav navbar-nav">
-          <li class="active">
-            <a href="home.html">
-              Home
-            </a>
-          </li>
-          <li>
-            <a href="controlar.html">
-              Controlar
-            </a>
-          </li>
-          <li>
-            <a href="led.html">
-              LED
-            </a>
-          </li>
-          <li>
-            <a href="modo.html">
-              Modos de conducao
-            </a>
-          </li>
-          <li>
-            <a href="contato.html">
-              Contato
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <div align = "center">
-      <h1> Seja bem-vindo ao projeto carro v2 </h1>
-    </div>
-    <div align = "justify">
-      <p> Desfrute do seu belo carrinho Wi-Fi. </p>
-    </div>
-  </body>
-</html>
+<html><head>
+<meta http-equiv="content-type" content="text/html; charset=windows-1252">
+<title>Home - Project Car v2</title>
+<style></style></head><body>
+<h1>Bem vindo ao projeto carro v2</h1>
+<p>Desfrute do seu novo carro.
+  <ul style="list-style-type:circle">
+    <a href="home.html"><li>Home</li></a>
+    <a href="controlar.html"><li>Controlar</li></a>
+    <a href="led.html"><li>LED</li></a>
+    <a href="conducao.html"><li>Modos de conducao</li></a>
+    <a href="contato.html"><li>Contato</li></a>
+  </ul>  
+</p>
+<p>Mais opcoes: <a href="home.html">Home</a> | <a href="controlar.html">Controlar</a> | <a href="led.html">LED</a> | <a href="modo.html">Modos de conducao</a> | <a href="contato.html">Contato</a></p>
+</body></html>
