Parece que agora foi

--- a/slaveCar/404.html
+++ b/slaveCar/404.html
@@ -1,9 +1,15 @@
-<!DOCTYPE html PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html><head>
-<meta http-equiv="content-type" content="text/html; charset=windows-1252">
-<title>404 Page not found - Project Car v2</title>
-<style></style></head><body>
-<h1>Page not found :(</h1>
-<p>The requested URL was not found on this server.</p>
-<p>Mais opcoes: <a href="home.html">Home</a> | <a href="controlar.html">Controlar</a> | <a href="led.html">LED</a> | <a href="modo.html">Modos de conducao</a> | <a href="contato.html">Contato</a></p>
-</body></html>
+<html>
+  <head>
+      <title>404 Page not found - Project Car v2</title>
+  </head>
+  <body>
+    <h1>Page not found :(</h1>
+        <p>The requested URL was not found on this server.</p>
+        <p>Mais opcoes:
+          <a href="home.html">Home</a> |
+          <a href="controlar.html">Controlar</a> |
+          <a href="led.html">LED</a> |
+          <a href="modo.html">Modos de conducao</a> |
+          <a href="contato.html">Contato</a></p>
+  </body>
+</html>
