--- a/slaveCar/home.html
+++ b/slaveCar/home.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html><head>
-<meta http-equiv="content-type" content="text/html; charset=windows-1252">
-<title>Home - Project Car v2</title>
-<style></style></head><body>
-<h1>Bem vindo ao projeto carro v2</h1>
-<p>Desfrute do seu novo carro.
-  <ul style="list-style-type:circle">
-    <a href="home.html"><li>Home</li></a>
-    <a href="controlar.html"><li>Controlar</li></a>
-    <a href="led.html"><li>LED</li></a>
-    <a href="conducao.html"><li>Modos de conducao</li></a>
-    <a href="contato.html"><li>Contato</li></a>
-  </ul>  
-</p>
-<p>Mais opcoes: <a href="home.html">Home</a> | <a href="controlar.html">Controlar</a> | <a href="led.html">LED</a> | <a href="modo.html">Modos de conducao</a> | <a href="contato.html">Contato</a></p>
-</body></html>
+<html>
+  <head>
+		<title>Home - Project Car v2</title>
+  </head>
+  <body>
+    <h1>Bem vindo ao projeto carro v2</h1>
+		<p>Desfrute do seu novo carro.
+		<ul style="list-style-type:circle">
+			<a href="home.html"><li>Home</li></a>
+		    <a href="controlar.html"><li>Controlar</li></a>
+		    <a href="led.html"><li>LED</li></a>
+		    <a href="conducao.html"><li>Modos de conducao</li></a>
+		    <a href="contato.html"><li>Contato</li></a>
+		</ul>    
+		</p>
+  </body>
+</html>
